# Univ_assignment

./: CMakeLists.txt  Operating_Module.cpp  Operating_Module.h  assignment_C_3_2.c  assignment_C_3_2.h  assignment_C_3_80p_81p.c  assignment_C_3_80p_81p.h  assignment_C_4_76.c  assignment_C_4_76.h  fc_Module.cpp  fc_Module.h  main.cpp
